--- a/en/galeria.njk
+++ b/en/galeria.njk
@@ -1,9 +1,9 @@
 ---
 layout: base.njk
-title: "Galería de fotos"
-description: "Imágenes de la casa: interior, exterior y entorno."
-permalink: "/la-casa/galeria/"
-lang: "es"
+title: "Photo gallery"
+description: "Images of the house: interior, exterior and surroundings."
+permalink: "/en/la-casa/galeria/"
+lang: "en"
 alternates:
   - { lang: "es", url: "/la-casa/galeria/" }
   - { lang: "en", url: "/en/la-casa/galeria/" }
