--- a/en/gracias.njk
+++ b/en/gracias.njk
@@ -1,8 +1,8 @@
 ---
 layout: base.njk
-title: "¡Gracias!"
-permalink: "/gracias/"
-lang: "es"
+title: "Thank you!"
+permalink: "/en/gracias/"
+lang: "en"
 alternates:
   - { lang: "es", url: "/gracias/" }
   - { lang: "en", url: "/en/gracias/" }
