--- a/en/legal.njk
+++ b/en/legal.njk
@@ -1,8 +1,8 @@
 ---
 layout: base.njk
-title: "Aviso Legal"
-permalink: "/legal/"
-lang: "es"
+title: "Legal notice"
+permalink: "/en/legal/"
+lang: "en"
 alternates:
   - { lang: "es", url: "/legal/" }
   - { lang: "en", url: "/en/legal/" }
