--- a/fr/cookies.njk
+++ b/fr/cookies.njk
@@ -1,9 +1,9 @@
 ---
 layout: base.njk
-title: "Política de Cookies"
-description: "Cómo usamos las cookies en Casa Bardena Negra: tipos, finalidad y cómo gestionar tus preferencias."
-permalink: "/cookies/"
-lang: "es"
+title: "Politique relative aux cookies"
+description: "Comment Casa Bardena Negra utilise les cookies : types, finalités et gestion de vos préférences."
+permalink: "/fr/cookies/"
+lang: "fr"
 alternates:
   - { lang: "es", url: "/cookies/" }
   - { lang: "en", url: "/en/cookies/" }
