--- a/fr/equipamiento.njk
+++ b/fr/equipamiento.njk
@@ -1,10 +1,10 @@
 ---
 layout: base.njk
-title: "Inventario de equipamiento (interno)"
-description: "Listado de equipamiento para control de entradas y salidas."
-permalink: "/la-casa/equipamiento/"
+title: "Inventaire des équipements (interne)"
+description: "Liste des équipements pour le contrôle des entrées et des sorties."
+permalink: "/fr/la-casa/equipamiento/"
 noindex: true
-lang: "es"
+lang: "fr"
 alternates:
   - { lang: "es", url: "/la-casa/equipamiento/" }
   - { lang: "en", url: "/en/la-casa/equipamiento/" }
