--- a/fr/galeria.njk
+++ b/fr/galeria.njk
@@ -1,9 +1,9 @@
 ---
 layout: base.njk
-title: "Galería de fotos"
-description: "Imágenes de la casa: interior, exterior y entorno."
-permalink: "/la-casa/galeria/"
-lang: "es"
+title: "Galerie photos"
+description: "Photos de la maison : intérieur, extérieur et environnement."
+permalink: "/fr/la-casa/galeria/"
+lang: "fr"
 alternates:
   - { lang: "es", url: "/la-casa/galeria/" }
   - { lang: "en", url: "/en/la-casa/galeria/" }
