--- a/fr/gracias.njk
+++ b/fr/gracias.njk
@@ -1,8 +1,8 @@
 ---
 layout: base.njk
-title: "¡Gracias!"
-permalink: "/gracias/"
-lang: "es"
+title: "¡Merci!"
+permalink: "/fr/gracias/"
+lang: "fr"
 alternates:
   - { lang: "es", url: "/gracias/" }
   - { lang: "en", url: "/en/gracias/" }
