--- a/fr/la-casa.njk
+++ b/fr/la-casa.njk
@@ -1,9 +1,9 @@
 ---
 layout: base.njk
-title: "La Casa · Equipamiento y estancias"
-description: "4 dormitorios, 2 baños, salón-comedor y cocina equipada. Jardín con barbacoa. A/A en todas las habitaciones."
-permalink: "/la-casa/"
-lang: "es"
+title: "La maison · Équipements et chambres"
+description: "4 chambres, 2 salles de bains, salon/salle à manger et cuisine entièrement équipée. Jardin avec barbecue. Climatisation dans toutes les pièces."
+permalink: "/fr/la-casa/"
+lang: "fr"
 alternates:
   - { lang: "es", url: "/la-casa/" }
   - { lang: "en", url: "/en/la-casa/" }
