--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -46,7 +46,7 @@ title: ""
             <a href="/la-casa/" role="menuitem" class="parent-link only-mobile"><strong>Ver “La casa”</strong></a>
             <a href="/la-casa/faq/" role="menuitem">Preguntas frecuentes</a>
             <a href="/galeria/" role="menuitem">Galería</a>
-            <a href="/equipamiento/" role="menuitem">Equipamiento</a>
+            <a href="/la-casa/equipamiento/" role="menuitem">Equipamiento</a>
           </div>
         </div>
 
