--- a/fr/legal.njk
+++ b/fr/legal.njk
@@ -1,8 +1,8 @@
 ---
 layout: base.njk
-title: "Aviso Legal"
-permalink: "/legal/"
-lang: "es"
+title: "Mentions légales"
+permalink: "/fr/legal/"
+lang: "fr"
 alternates:
   - { lang: "es", url: "/legal/" }
   - { lang: "en", url: "/en/legal/" }
