Ajuste de enlaces internos

--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -45,8 +45,8 @@ title: ""
           <div class="submenu" id="submenu-casa" role="menu" aria-labelledby="link-casa">
             <a href="/la-casa/" role="menuitem" class="parent-link only-mobile"><strong>Ver “La casa”</strong></a>
             <a href="/la-casa/faq/" role="menuitem">Preguntas frecuentes</a>
-            <a href="/galeria/" role="menuitem">Galería</a>
-            <a href="/equipamiento/" role="menuitem">Equipamiento</a>
+            <a href="/la-casa/galeria/" role="menuitem">Galería</a>
+            <a href="/la-casa/equipamiento/" role="menuitem">Equipamiento</a>
           </div>
         </div>
 
