--- a/equipamiento.njk
+++ b/equipamiento.njk
@@ -2,7 +2,7 @@
 layout: base.njk
 title: "Inventario de equipamiento (interno)"
 description: "Listado de equipamiento para control de entradas y salidas."
-permalink: "/equipamiento/"
+permalink: "/la-casa/equipamiento/"
 noindex: true
 ---
 
