--- a/index.njk
+++ b/index.njk
@@ -101,7 +101,7 @@ permalink: "/"
       <img src="/images/terraza.jpg" alt="Jardín con terraza y barbacoa" style="display:block;width:100%;height:auto">
     </figure>
   </div>
-  <p style="text-align:center;margin-top:.8rem"><a href="/galeria/" class="btn alt">Abrir galería completa</a></p>
+  <p style="text-align:center;margin-top:.8rem"><a href="/la-casa/galeria/" class="btn alt">Abrir galería completa</a></p>
 </section>
 
 <!-- ENTORNO -->
