--- a/la-casa.njk
+++ b/la-casa.njk
@@ -160,7 +160,7 @@ permalink: "/la-casa/"
       </a>
     </figure>
   </div>
-  <p style="text-align:center;margin-top:.8rem"><a href="/galeria/" class="btn alt">Abrir galería completa</a></p>
+  <p style="text-align:center;margin-top:.8rem"><a href="/la-casa/galeria/" class="btn alt">Abrir galería completa</a></p>
 </section>
 
 <!-- Normas -->
@@ -175,7 +175,7 @@ permalink: "/la-casa/"
       <li>Indica tu <strong>hora prevista de llegada</strong> al reservar.</li>
     </ul>
   </div>
-  <p style="text-align:center;margin-top:.8rem"><a href="/equipamiento/" class="btn alt">Inventario de equipamiento (interno)</a></p>
+  <p style="text-align:center;margin-top:.8rem"><a href="/la-casa/equipamiento/" class="btn alt">Inventario de equipamiento (interno)</a></p>
 </section>
 
 
