prueba de home y de errores tipo

--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -40,10 +40,10 @@ title: ""
                   aria-haspopup="menu"
                   aria-expanded="false"
                   aria-controls="submenu-casa">
-            <span class="chev" aria-hidden="true">▾</span>
+            <notranslate><span class="chev" aria-hidden="true">▾</span>
           </button>
           <div class="submenu" id="submenu-casa" role="menu" aria-labelledby="link-casa">
-            <a href="/la-casa/" role="menuitem" class="parent-link only-mobile"><strong>Ver “La casa”</strong></a>
+            <a href="/la-casa/" role="menuitem" class="parent-link only-mobile"><notranslate><strong>Ver “La casa”</strong></a>
             <a href="/la-casa/faq/" role="menuitem">Preguntas frecuentes</a>
             <a href="/la-casa/galeria/" role="menuitem">Galería</a>
             <a href="/la-casa/equipamiento/" role="menuitem">Equipamiento</a>
@@ -58,10 +58,10 @@ title: ""
                   aria-haspopup="menu"
                   aria-expanded="false"
                   aria-controls="submenu-entorno">
-            <span class="chev" aria-hidden="true">▾</span>
+            <notranslate><span class="chev" aria-hidden="true">▾</span>
           </button>
           <div class="submenu" id="submenu-entorno" role="menu" aria-labelledby="link-entorno">
-            <a href="/entorno/" role="menuitem" class="parent-link only-mobile"><strong>Ver “Entorno”</strong></a>
+            <a href="/entorno/" role="menuitem" class="parent-link only-mobile"><notranslate><strong>Ver “Entorno”</strong></a>
             <a href="/entorno/bardenas/" role="menuitem">Bardenas Reales</a>
             <a href="/entorno/tudela/"   role="menuitem">Tudela</a>
             <a href="/entorno/sendaviva/" role="menuitem">Sendaviva</a>
